# vega

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/scripts/: install-gtk-deps.sh
.github/workflows/: build.yml  pre-commit.yml  release.yml
docs/: architecture.md  coding-style.md  configuration.md  dev-notes.md  fzf-backend.md
src/: candidate.rs  config.rs  fzf.rs  gui.rs  lib.rs  main.rs  modes.rs  settings.rs  template.rs  theme.rs
