[package]
name = "vega"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A rofi-like launcher prototype with a managed fzf backend"
authors = ["Shreyas Manjunath <mshreyas11@gmail.com>"]
readme = "README.md"

[dependencies]
eframe = { version = "0.34.1", default-features = true }
minijinja = "2.12.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
